<resources>
    <string name="app_name">ToDo</string>
    <string name="add_task">Add Task</string>
    <string name="remove_task">Remove Task</string>
    <string name="new_task">New Task</string>
    <string name="task_title_label">Title</string>
    <string name="task_title_description">Description</string>
    <string name="task_form_confirm">Confirm</string>
    <string name="edit_task">Edit Task</string>
    <string name="user_avatar">Avatar</string>
    <string name="user_avatar_select_image">Choose Image</string>
    <string name="user_avatar_take_picture">Take a Picture</string>
    <string name="camera_permission_reason">The camera will be used to take a picture for your avatar.</string>
    <string name="accept">Accept</string>
    <string name="decline">Decline</string>
    <string name="user_avatar_take_picture_failed">Failed to take picture!</string>
    <string name="user_first_name">First Name</string>
    <string name="user_last_name">Last Name</string>
    <string name="user_email">Email</string>
    <string name="user_confirm">Confirm</string>
    <string name="auth_log_in">Log in</string>
    <string name="auth_sign_up">Sign Up</string>
    <string name="user_password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="connection_error">Connection error!</string>
    <string name="user_log_out">Log Out</string>
</resources>